# Autonomous-warehouse-through-AMR

./: README.md
actions_py/: package.xml  setup.py
actions_py/actions_py/: count_until_client.py  count_until_server.py
amr_interfaces/: CMakeLists.txt  package.xml
arduinobot_controller/: CMakeLists.txt  package.xml
arduinobot_controller/config/: arduinobot_controllers.yaml
arduinobot_controller/launch/: controller.launch.py
arduinobot_moveit/: package.xml
arduinobot_moveit/config/: arduinobot.srdf
arduinobot_moveit/launch/: moveit.launch.py
custom_nav2_costmap_plugin/: CMakeLists.txt  package.xml  robots_layer.xml
custom_nav2_costmap_plugin/src/: robots_layer.cpp
fwd_bot/: CMakeLists.txt
lift_joint_controller/: package.xml  setup.cfg  setup.py
lift_joint_controller/lift_joint_controller/: lift_joint_controller.py
my_bot/: CMakeLists.txt  tt
my_bot/behavior_tree/: my_nav_to_pose_bt.xml
my_bot/config/: collision1.rviz  collision_monitor_params.yaml  nav2_multirobot_params_1.yaml  nav2_multirobot_params_2.yaml  nav2_params.yaml
my_bot/description/: arduinobot_ros2_control.xacro  gazebo_control.xacro  lidar.xacro  lift.xacro  lift_controller.xacro  robot.urdf.xacro  robot_core.xacro
my_bot/launch/: arti_sim_launch.py  collision_monitor_node.launch.py  dev_simulation_launch.py  display.launch.py  robit_sim_launch.py  rsp.launch.py  single_bot_launch.py  tb3_simulation_launch.py  unique_multi_tb3_simulation_launch.py
my_bot/maps/: maps.pgm  maps.yaml  mmm.pgm  mmm.yaml  ware.yaml  warehouse.pgm  warehouse.yaml  warehouse3.pgm  warehouse3.yaml
my_bot/worlds/: warehoue1.world  warehouse.world  warehouse2.world  warehouse3.world
nav2_waypoint_follower/: CMakeLists.txt  package.xml  plugins.xml
nav2_waypoint_follower/plugins/: lift_at_waypoint.cpp  wait_at_waypoint.cpp
py_srvcli/: package.xml  setup.py
py_srvcli/py_srvcli/: client_member_function.py  service_member_function.py
robitcubebot_bringup/: CMakeLists.txt  package.xml
robitcubebot_bringup/config/: lift_params.yaml  robitcube_controller.yaml  robitcube_controller_real.yaml
robitcubebot_bringup/launch/: controller.launch.py  controller_real_robot.launch.py  my_robot_gazebo.launch.xml  real_robot.launch.py  simulated_robot.launch.py
robitcubebot_bringup/worlds/: my_world.world
robitcubebot_controller/: CMakeLists.txt  package.xml  setup.py
robitcubebot_controller/config/: joy_config.yaml  joy_teleop.yaml  key_teleop.yaml  robitcubebot_controllers.yaml
robitcubebot_controller/launch/: controller.launch.py  joystick.launch.py  joystick_teleop.launch.py  rsp.launch.py  teleop_twist_keyboard.launch.py
robitcubebot_controller/robitcubebot_controller/: lifter_controller.py  setup.py  simple_controller.py
robitcubebot_controller/src/: lifter_controller.cpp  noisy_controller.cpp  simple_controller.cpp  twist_publisher.cpp
robitcubebot_controller/src/robitcubebot_controller/: noisy_controller.py  simple_controller.py  twist_publisher.py
robitcubebot_description/: CMakeLists.txt  package.xml
robitcubebot_description/config/: nav2_multirobot_params_1.yaml  nav2_multirobot_params_2.yaml  nav2_namespaced_view.rviz
robitcubebot_description/launch/: arti_sim_launch.py  bringup_launch.py  collision_navigation_launch.py  display.launch.py  display.launch.xml  gazebo.launch.py  multi_collision_monitor_launch.py  rsp.launch.py  tb3_simulation_launch.py  unique_multi_tb3_simulation_launch.py
robitcubebot_description/meshes/: Lead_screw.STL  base_link.STL  upper_link.STL  upperstand.STL
robitcubebot_description/rviz/: collision.rviz  display.rviz  mini.world  my_robot_config.rviz  nav2_multirobot_params_1.yaml  nav2_multirobot_params_2.yaml  nav2_params.yaml
robitcubebot_description/urdf/: commands.txt  common_properties.xacro  gazebo_control.xacro  gazebo_control_plugin.xacro  (+9 more)
robitcubebot_firmware/: CMakeLists.txt  package.xml  robitcubebot_interface.xml
robitcubebot_localization/: CMakeLists.txt  package.xml
robitcubebot_moveit/: CMakeLists.txt  package.xml
robitcubebot_moveit/config/: arduinobot.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  robitcubebot.srdf
robitcubebot_moveit/launch/: moveit.launch.py
robitcubebot_navigation/: CMakeLists.txt  my_world.yaml  package.xml
robitcubebot_py/: package.xml  setup.cfg  setup.py
robitcubebot_python/: package.xml  setup.cfg  setup.py
robitcubebot_test_launch/: CMakeLists.txt  package.xml
robitcubebot_test_launch/config/: key_config.yaml  twist_params.yaml
robitcubebot_test_launch/launch/: teleop_twist_keyboard.launch.py
robitcubebot_test_launch/robitcubebot_test_launch/: twist_publisher_.py
task_allocation/: README.md  package.xml  setup.cfg  setup.py
(+58 files in other folders)
