<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robitcubebot_moveit</name>
  <version>0.0.0</version>
  <description>MoveIt configuration package for the RobitCubeBot robot.</description>
  <maintainer email="otaha3911@gmail.com">Omar</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Add dependencies specific to your project -->
  <depend>roscpp</depend>
  <depend>robot_state_publisher</depend> <!-- Example, adjust based on your dependencies -->



  <exec_depend>ros2launch</exec_depend>

  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
