<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robitcubebot_test_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="otaha3911@gmail.com">omar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>teleop_twist_keyboard</depend>

  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
